--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk: openjdk14
 
 cache:
   directories:
-  - $HOME/.m2
+    $HOME/.m2
 
 script:
-  - ./mvnw clean install
+    ./mvnw clean install
